# kernel-sim

./: .gitignore  CMakeLists.txt  README.md  configure.py  configure.sh
.github/workflows/: cmake.yml
include/: clock.h  core.h  cpu.h  defines.h  globals.h  loader.h  machine.h  physical.h  process.h  procqueue.h  rbtree.h  scheduler.h  thread.h  timer.h  types.h  utils.h
src/: CMakeLists.txt  Untitled-1.c  clock.c  clock.h  core.c  core.h  cpu.c  cpu.h  loader.c  machine.c  machine.h  main.c  physical.c  process.c  process.h  procqueue.c  scheduler.c  thread.h  timer.c  utils.c  utils.h
